<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings"></string>
    <string name="app_name">网络版阅读器</string>
    <string name="noPics">请先下载漫画资源!</string>
    <string name="emptyDir">压缩包有空,请重新随机获取图片!</string>
    <string name="init_tips">请选择要阅读的漫画!</string>
    <string name="tip_title">青鸟动漫</string>
    <string name="tip_submit">是</string>
    <string name="tip_cancel">否</string>
    <string name="loading_no_sdcard">SDCard卡不存在!</string>
    <string name="loading_no_connection_service">服务器链接失败!</string>
    <string name="noPath">所选漫画路径不存在！</string>
    <string name="sdcard">SD Card</string>

    <string name="sdcard_hall">动漫大厅</string>
    <string name="sdcard_is_file">文件</string>
    <string name="sdcard_no_files">没有该目录!</string>
    <string name="sdcard_no_sdcard">SDCard卡不存在</string>
    <string name="goback">返回</string>
    <string name="sdcard_noPic">该文件不存在!</string>
    <string name="book_title">书库目录</string>
    <string name="book_collection">收藏成功!</string>
    <string name="book_collection_title">收藏设置</string>
    <string name="book_collection_deleteAll">是否要删除全部收藏?</string>
    <string name="book_collection_exist">您已经收藏过了!</string>
    <string name="book_recently_title">最近阅读管理</string>
    <string name="book_download_exist">点击可以直接进行阅读提示:该本漫画书已经下载!</string>
    <string name="book_refresh">请稍候,加载中....</string>
    <string name="book_download_exist_tip">已经下载</string>
    <string name="book_download_begin">开始下载...</string>
    <string name="book_more">更 多</string>
    <string name="book_title_zd">本期主打</string>
    <string name="book_title_lszd">历史主打</string>
    <string name="book_title_tj">热门推荐</string>
    <string name="book_title_ph">热门排行</string>
    <string name="book_recommend">推荐指数</string>
    <string name="download_read">下载阅读</string>
    <string name="download_finish">已经下载</string>
    <string name="download_commendRate">好评率</string>
    <string name="download_hitNums">阅读次数:</string>
    <string name="download_title">是否进行下载?</string>
    <string name="download_submit">下载</string>
    <string name="download_exists">该本书已经下载,加载中!</string>
    <string name="download_failed">下载失败,服务请求失败!</string>
    <!-- <string name="download_fail">下载失败!</string> -->
    <string name="download_refresh">下载完成,载入中,请稍后....</string>
    <string name="menu_open">打开</string>
    <string name="menu_share">分享</string>
    <string name="menu_setup">设置</string>
    <string name="menu_close">关闭</string>
    <string name="menu_turn">旋转</string>
    <string name="menu_more">更多</string>
    <string name="menu_goto">跳转</string>
    <string name="menu_bookmark">书签</string>
    <string name="logout_title">提示</string>
    <string name="logout_msg_title">青鸟动漫</string>
    <string name="logout_msg_body">确定要退出【动漫阅读器】么?</string>
    <string name="logout_confirm">是</string>
    <string name="logout_cancel">否</string>
    <string name="directoryName">目录名</string>
    <string name="pageTitle">跳转到</string>
    <string name="pageFirst">当前位置是第一页!</string>
    <string name="pageEnd">当前位置是最后一页!</string>
    <string name="picPreview">图片预览</string>
    <string name="picInfo">图片详情</string>
    <string name="picRotate">自定义旋转</string>
    <string name="picSetUp">设置</string>
    <string name="fixtimetobrowse">定时阅览</string>
    <string name="handcontrol">手动:</string>
    <string name="second3">3秒钟:</string>
    <string name="second5">5秒钟:</string>
    <string name="pageNumError">页码有误</string>
    <string name="coll_nomsg">还没有收藏!</string>
    <string name="read_nomsg">还没有阅读!</string>
    <string name="top_title">动漫阅读器</string>
    <string name="menu_mycollection">我的收藏</string>
    <string name="menu_recentlyread">最近阅读</string>
    <string name="menu_openfile">打开文件</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_finished">已完成</string>
    <string name="menu_downqueue">下载队列</string>
    <string name="bookInfo_collection_success">收藏成功!</string>
    <string name="bookInfo_collection_fail">收藏失败!</string>
    <string name="bookInfo_collection_exist">该本漫画书已经收藏过!</string>
    <string name="collection_delete_item">删除该记录</string>
    <string name="collection_delete_title">操作提示</string>
    <string name="collection_delete_content">是否要删除该记录?</string>
    <string name="download_delete_content">是否要删除下载的漫画书?</string>
    <string name="download_wait">打开文件中,请稍后....</string>
    <string name="download_fail">文件下载失败!</string>
    <string name="currentMark">该书当前评分值为：</string>
    <string name="rateCounts">已参与评分人数：</string>
    <string name="rate_success">评分成功!</string>
    <string name="rate_failed">评分失败!</string>
    <string name="search_alltype">全部</string>
    <string name="searchHint">请输入...关键字用空格分开</string>
    <string name="byName">书名</string>
    <string name="byWriter">作者</string>
    <string name="byContent">内容</string>
    <string name="bookInfo_bookTitle">书名:</string>
    <string name="bookInfo_writer">作者:</string>
    <string name="about">关  于</string>
    <string name="about_title">关于动漫阅读器</string>
    <string name="about_body">这是一款基于Android操作系统的网络版动漫阅读器客户端,使用该动漫阅读器可以随时随地地看自己想看的漫画!\t\t---Treant\n\n\n</string>
    <string name="about_bottom">本版权归北大青鸟集团所有\n\ncopyright©2010-2015</string>
    <string name="feedback">反  馈</string>
    <string name="advise_Hint">请输入要反馈的内容!</string>
    <string name="advise_content">请输入反馈信息!</string>
    <string name="advise_success">信息反馈成功!</string>
    <string name="advise_fail">信息反馈失败!</string>
    <string name="advise_Submit">提交</string>
    <string name="advise_Success">提交成功!</string>
    <string name="bookType_tip">该类型不存在!</string>
    <string name="warmlyAlert">温馨提示</string>
    <string name="promise">您是否愿意提交相关信息以协助我们更好地改善服务,我们保证不泄露您的个人资料给无关的第三方(包括公司或个人)...</string>
    <string name="willing">同意</string>
    <string name="maybe_later">以后再说</string>
    <string name="thanks">谢谢支持...</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="city_prompt">请选择城市</string>
    <string name="area_prompt">请选择城区</string>
    <string name="wrongEmail">Email格式有误!</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="chooseIcon">请选择头像</string>
    <string name="tooSmall">不能再继续缩小了！</string>
    <string name="tooBig">不能再继续放大了！</string>
    <string name="rate">评分</string>

</resources>