<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="15dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentMark" />

        <TextView
            android:id="@+id/currentMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/bookGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentMark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dip"
        android:focusable="true"
        android:isIndicator="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookGrade"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="15dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateCounts" />

        <TextView
            android:id="@+id/personAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookGrade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submitRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate" />

        <Button
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/goback" />

        <Button
            android:id="@+id/cancelRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>